--- a/src/main/resources/templates/legacy/main.html
+++ b/src/main/resources/templates/legacy/main.html
@@ -4,8 +4,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>{{title}}</title>
     <style>
+        img {
+            max-width: 100%;
+        }
         body {
             margin: 0;
+            padding: 0.5rem 0.5rem 0.5rem 0.5rem;
         }
         .chord {
             text-decoration: none;
