--- a/src/main/resources/templates/print/main.html
+++ b/src/main/resources/templates/print/main.html
@@ -4,6 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>{{title}}</title>
     <style>
+        img {
+            max-width: 100%;
+        }
         h1 { font-size: 1.25em; }
         .chord {
             text-decoration: none;
