i18n for section names

--- a/src/main/resources/templates/inline/main.html
+++ b/src/main/resources/templates/inline/main.html
@@ -82,7 +82,7 @@
 <div id='content'>
     {{#sections}}
     <div class='{{css}}"'>
-        <div class="header">{{longName}}</div>
+        <div class="header">{{localName}}</div>
         <div class="section-content">
             {{#content.lines}}
             <div class='song-text-line {{css}}'>
