--- a/src/resources/templates/legacy/main.html
+++ b/src/resources/templates/legacy/main.html
@@ -4,6 +4,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>{{title}}</title>
     <style>
+        .hide-comments comment {
+            display: none;
+        }
+        comment {
+            display: block;
+            font-style: italic;
+        }
         img {
             max-width: 100%;
         }
