hiding unknown section

--- a/src/resources/templates/style.scss
+++ b/src/resources/templates/style.scss
@@ -144,5 +144,8 @@ color: black; background-color: white;
     .bpm {
         padding: 0 0.5em;
     }
+}
 
+.section-type-unknown {
+    display: none;
 }
