--- a/src/resources/templates/legacy/main.html
+++ b/src/resources/templates/legacy/main.html
@@ -3,58 +3,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>{{title}}</title>
-    <style>
-        .hide-comments comment {
-            display: none;
-        }
-        comment {
-            display: block;
-            font-style: italic;
-        }
-        img {
-            max-width: 100%;
-        }
-        body {
-            margin: 0;
-            padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-        }
-        .chord {
-            text-decoration: none;
-            color: blue !important;
-        }
-        .content {
-            white-space: pre-wrap; tab-size: 1;
-        }
-
-        /* theme-specific */
-        .dark { background-color: black; color: white; }
-        .dark .chord { color: #FFD050 !important; }
-        .dark .section {
-            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.4);
-        }
-
-        /* settings-specific */
-        .font-monospace, .font-monospace .chord {
-            font-family: 'monospace' !important;
-        }
-        .font-serif, .font-serif .chord {
-            font-family: 'serif' !important;
-        }
-        .font-normal, .font-normal .chord {
-            font-family: 'normal' !important;
-        }
-        .double-column {
-            column-count: 2; column-gap: 30px; -webkit-column-count: 2; -webkit-column-gap: 30px;
-        }
-        .resize-chords .chord { font-size: 150% !important; }
-        .use-bold, .use-bold .chord {
-            font-weight: 900 !important;
-        }
+    <link href="style.css"/>
+    <style rel="stylesheet">
     </style>
 </head>
-<body class='{{displaySettings.css}}'>
+<body>
 <!-- @formatter:off -->
-<div class="content">{{originalText}}</div>
+<div class='main-song-content legacy {{displaySettings.css}} {{css}}'><div class="content">{{originalText}}</div></div>
 <!-- @formatter:on -->
 </body>
 </html>
